==================================
Rilascio v2.0.18    del 01/07/2017
==================================

Corretto in doppio engage dei rybutton su pressione da tastiera.

==================================
Rilascio v2.0.17    del 01/07/2017
==================================

Ego setup per applicazioni: reso compatibile con dispositivi mobili.

==================================
Rilascio v2.0.16    del 29/06/2017
==================================

ryTable: elenco per dispositivi mobili.
Postman: iniziata la versione per dispositivi mobili.

==================================
Rilascio v2.0.15    del 24/06/2017
==================================

Filibuster: aggiunto un padding nella versione mobile.

Aggiunte funzionalità per una futura versione adatta a dispositivi mobili.

WINZ: corrette anomalie sul richiamo di Pilota e Postman.

==================================
Rilascio v2.0.14    del 09/06/2017
==================================

ryUnbound: corretto l'errore di interpretazione degli argomenti della funzione "sort".

==================================
Rilascio v2.0.13    del 08/06/2017
==================================

Aggiunta a RYWINZ la funzione di preview di documenti.

==================================
Rilascio v2.0.12    del 07/06/2017
==================================

Aggiunta una funzionalità standard per l'anteprima degli allegati.

==================================
Rilascio v2.0.11    del 05/06/2017
==================================

Aggiornato il componente phpThumb.

==================================
Rilascio v2.0.10    del 04/06/2017
==================================

Ego: aggiunta la funzione egoautomatic(u, p) per il collegamento da app.

==================================
Rilascio v2.0.9     del 02/06/2017
==================================

Miglioramenti estetici dei controlli di maschera e di Ego.

==================================
Rilascio v2.0.8     del 15/05/2017
==================================
